--- a/iosApp/QRShield/ko.lproj/Localizable.strings
+++ b/iosApp/QRShield/ko.lproj/Localizable.strings
@@ -197,3 +197,66 @@
 
 // MARK: - Onboarding UI
 "onboarding.page_counter" = "%d/%d";
+
+// MARK: - Dashboard
+"dashboard.hero.tagline" = "안전합니다. 오프라인.";
+"dashboard.hero.tagline2" = "설명 가능한 방어.";
+"dashboard.hero.description" = "QR-SHIELD는 하드웨어에서 직접 잠재적 위협을 분석합니다. ";
+"dashboard.hero.zero_latency" = "제로 지연 보호를 경험하세요.";
+"dashboard.enterprise_badge" = "엔터프라이즈 보호 활성화";
+"dashboard.analyze" = "분석";
+"dashboard.scan_qr" = "QR 코드 스캔";
+"dashboard.import_image" = "이미지 가져오기";
+"dashboard.system_optimal" = "시스템 최적";
+"dashboard.engine_status" = "엔진 v2.4 • 2시간 전 업데이트";
+"dashboard.threats_blocked" = "차단된 위협";
+"dashboard.safe_scans" = "안전한 스캔";
+"dashboard.engine_features" = "엔진 기능";
+"dashboard.recent_scans" = "최근 스캔";
+"dashboard.view_all" = "모두 보기";
+"dashboard.no_scans_yet" = "아직 스캔이 없습니다";
+"dashboard.no_scans_message" = "시작하려면 QR 코드를 스캔하거나 URL을 붙여넣으세요";
+"dashboard.threat_database" = "위협 데이터베이스";
+"dashboard.db_updated" = "로컬 데이터베이스가 성공적으로 업데이트되었습니다.";
+"dashboard.offline_ready" = "오프라인 준비 완료";
+
+// MARK: - Settings Quick Actions
+"settings.quick_actions" = "빠른 작업";
+"settings.threat_monitor" = "위협 모니터";
+"settings.threat_monitor_desc" = "실시간 위협 보기 및 보안 감사 실행";
+"settings.trust_centre" = "신뢰 센터";
+"settings.trust_centre_desc" = "개인정보 설정 및 위협 민감도";
+"settings.export_report" = "보고서 내보내기";
+"settings.export_report_desc" = "PDF 또는 JSON 보안 보고서 생성";
+
+// MARK: - Trust Centre
+"trust.title" = "신뢰 센터";
+"trust.offline_guarantee" = "엄격한 오프라인 보장";
+"trust.offline_description" = "QR-SHIELD 분석은 기기의 Neural Engine에서 완전히 실행됩니다. URL 데이터는 절대 휴대폰을 떠나지 않습니다.";
+"trust.threat_sensitivity" = "위협 민감도";
+"trust.reset_confirm" = "이렇게 하면 모든 신뢰 센터 설정이 기본값으로 재설정됩니다.";
+
+// MARK: - Results Actions
+"result.block_report" = "차단 및 신고";
+"result.block_description" = "도메인을 차단하고 보안팀에 신고합니다.";
+"result.block_action" = "액세스 방지 및 관리자에게 알림";
+"result.quarantine" = "샌드박스에서 격리";
+"result.quarantine_action" = "분석을 위해 안전하게 열기";
+"result.expected" = "예상: ";
+"result.detected" = "감지됨: ";
+"result.explainable_security" = "설명 가능한 보안";
+"result.url_breakdown" = "URL 분석";
+"result.full_url" = "전체 URL";
+"result.open_safari" = "Safari에서 열기 (위험)";
+"result.open_warning_full" = "브라우저에서 이 URL을 열면 보안 위험에 노출될 수 있습니다.";
+"result.restricted_mode" = "제한 모드";
+"result.restricted_description" = "이 URL은 잠재적으로 위험한 것으로 표시되었습니다. 계속하기 전에 아래 분석을 검토하세요.";
+"result.dangerous_warning" = "이 URL은 잠재적으로 위험한 것으로 표시되었습니다. 열면 피싱, 맬웨어 또는 기타 보안 위협에 노출될 수 있습니다.\n\n계속하시겠습니까?";
+
+// MARK: - Navigation
+"nav.quick_actions" = "빠른 작업";
+"nav.systems_operational" = "모든 시스템 정상 운영";
+
+// MARK: - Common
+"common.enabled" = "활성화됨";
+"common.disabled" = "비활성화됨";
